# Open-source-AI-Incident-Observatory

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  docs.yml  keepalive.yml
.streamlit/: config.toml
agentwatch/: cli.py  config.py  hashing.py  logging.py  metrics.py  scheduler.py  sources.py
agentwatch/api/: app.py  auth.py  queries.py  schemas.py
agentwatch/classify/: classifier.py  persist.py  prompt.py  provider.py  schema.py  taxonomy.py
agentwatch/collectors/: base.py  hackernews.py  http.py  reddit.py  replay.py
agentwatch/db/: models.py  session.py  types.py
agentwatch/eval/: dataset.json  metrics.py  runner.py
agentwatch/pipeline/: collect.py  ingest.py
agentwatch/storage/: artifacts.py
dashboard/: app.py  client.py
deploy/: Caddyfile  docker-compose.yml  prometheus.yml
docs/: api.md  architecture.md  classification.md  collection.md  data-model.md  deployment.md  development.md  index.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
migrations/: env.py
scripts/: render-api.sh  render-dashboard.sh
tests/: test_anthropic_provider.py  test_api_app.py  test_api_auth.py  test_api_queries.py  test_api_schemas.py  test_artifact_store.py  test_baseline_provider.py  test_classifier.py  test_classify_persist.py  test_cli.py  test_cli_classify.py  test_cli_serve.py  test_collect.py  test_collectors_base.py  test_config.py  test_dashboard_app.py  test_dashboard_client.py  test_db_types.py  test_db_url_normalize.py  test_eval.py  test_hackernews.py  test_hashing.py  test_http.py  test_ingest.py  test_logging.py  test_metrics.py  test_metrics_endpoint.py  test_migrations.py  test_models.py  test_ollama_provider.py  test_prompt.py  test_reddit.py  test_replay.py  test_session.py  test_smoke.py  test_taxonomy.py
(+18 files in other folders)
