[project]
name = "agentwatch"
version = "0.1.0"
description = "AgentWatch — open-source AI incident observatory"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "pytest-cov>=5.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentwatch*"]

[tool.setuptools.package-data]
agentwatch = ["collectors/fixtures/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic-generated migrations are machine-written; don't lint them.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
